<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Ed Letner.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timeline.TimelineActivity"
    tools:openDrawer="start">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <include layout="@layout/layout_appbar"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        style="@style/JustTimerTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <FrameLayout
          android:id="@+id/contentFrame"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

      <android.support.design.widget.FloatingActionButton
          android:id="@+id/floatingButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/floating_button_margin"
          android:src="@drawable/ic_play"
          app:fabSize="normal"
          app:layout_anchor="@id/contentFrame"
          app:layout_anchorGravity="bottom|right|end"/>

    </android.support.design.widget.CoordinatorLayout>

  </LinearLayout>

  <android.support.design.widget.NavigationView
      android:id="@+id/navigation_view"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:fitsSystemWindows="true"
      app:headerLayout="@layout/navigation_header"
      app:menu="@menu/drawer_actions"
      />

</android.support.v4.widget.DrawerLayout>