<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Ed Letner.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/events_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clickable="true"
      android:focusable="true">

    <LinearLayout
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <ListView
          android:id="@+id/eventsList"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          tools:listitem="@layout/event_item"
          android:divider="@color/colorPrimaryDark"
          android:dividerHeight="1dp"
          />
    </LinearLayout>

    <include layout="@layout/no_events_layout" android:visibility="gone"/>

  </RelativeLayout>

</RelativeLayout>