<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, Ed Letner.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventName"
        android:labelFor="@id/add_event_name"
        />

    <EditText
        android:id="@+id/add_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDuration"
        android:labelFor="@id/add_event_duration"
        />

    <EditText
        android:id="@+id/add_event_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDurationHint"
        android:inputType="none"
        android:focusable="false"
        android:maxLines="1"/>

  </LinearLayout>

</ScrollView>